<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_distance"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textColor="@color/black_33"/>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">
        <RadioButton
            android:id="@+id/one_km_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1km"
            android:button="@null"
            android:padding="10dp"/>
        <RadioButton
            android:id="@+id/two_km_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2km"
            android:button="@null"
            android:padding="10dp"/>
        <RadioButton
            android:id="@+id/three_km_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3km"
            android:button="@null"
            android:padding="10dp"/>

        <RadioButton
            android:id="@+id/five_km_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5km"
            android:button="@null"
            android:padding="10dp"/>
        <RadioButton
            android:id="@+id/seven_km_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7km"
            android:button="@null"
            android:padding="10dp"/>
        <RadioButton
            android:id="@+id/ten_km_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10km"
            android:button="@null"
            android:padding="10dp"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:focusable="true">
        <EditText
            android:id="@+id/max_distance_et"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            android:hint="@string/max_distance"
            android:textColorHint="@color/gray_99"
            android:textColor="@color/black_33"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/km_"
            android:textColor="@color/gray_99"
            android:textSize="14sp"/>
    </LinearLayout>


    <android.support.v7.widget.CardView
        android:id="@+id/confirm_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/yellow_65"
        android:layout_margin="20dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm1"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="@color/white" />
    </android.support.v7.widget.CardView>
</LinearLayout>