<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/top_title_layout"
        android:id="@+id/topPanel"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_below="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.cheyibao.view.RentCarAddressView
                android:id="@+id/rent_Car_address_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/split_line_color"/>
            <com.cheyibao.view.RentCarTimeView
                android:id="@+id/rent_car_time_View"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/white_f6"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/gray_99"
                    android:text="@string/select_car_model"/>
                <TextView
                    android:id="@+id/select_car_model_view"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/arrow_right"
                    android:drawablePadding="10dp"
                    android:padding="15dp"
                    android:textSize="14sp"
                    android:textColor="@color/black_33"
                    android:textColorHint="@color/black_33"
                    android:hint="@string/please_select_car_models"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/split_line_color"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/gray_99"
                    android:text="@string/select_shop_count"/>
                <TextView
                    android:id="@+id/select_shop_count"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@mipmap/arrow_right"
                    android:drawablePadding="10dp"
                    android:padding="15dp"
                    android:textSize="14sp"
                    android:textColor="@color/black_33"
                    android:textColorHint="@color/black_33"
                    android:hint="@string/please_shop_count"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_info"
                android:gravity="center"
                android:background="@color/white_f6"
                android:paddingTop="25dp"
                android:paddingBottom="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray_99"
                    android:textSize="14sp"
                    android:text="@string/contact_person_1"/>
                <EditText
                    android:id="@+id/contact_person_name_et"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_enter_contact_person_name"
                    android:background="@null"
                    android:textSize="14sp"
                    android:textColor="@color/black_33"
                    android:textColorHint="@color/black_33"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/split_line_color"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/gray_99"
                    android:text="@string/contact_phone_1"/>
                <EditText
                    android:id="@+id/contact_person_phone_et"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_enter_contact_phone"
                    android:background="@null"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="14sp"
                    android:maxLength="11"
                    android:inputType="phone"
                    android:textColor="@color/black_33"
                    android:textColorHint="@color/black_33"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/split_line_color"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/gray_99"
                    android:text="@string/identify_card_1"/>
                <EditText
                    android:id="@+id/identify_card_et"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_enter_identify_card"
                    android:background="@null"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/black_33"
                    android:textColorHint="@color/black_33"
                    android:maxLength="18"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/split_line_color"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/remark_1"/>
                <EditText
                    android:id="@+id/remarks_et"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_enter_remarks_info"
                    android:background="@null"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/black_33"
                    android:textColorHint="@color/black_33"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/white_f6"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/gray_99"
                    android:text="@string/emergency_contact_person_1"/>
                <EditText
                    android:id="@+id/mergency_contact_person_name_et"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_enter_emergency_contact_person_name"
                    android:background="@null"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/black_33"
                    android:textColorHint="@color/black_33"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/split_line_color"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textSize="14sp"
                    android:textColor="@color/gray_99"
                    android:layout_height="wrap_content"
                    android:text="@string/emergency_contact_phone"/>
                <EditText
                    android:id="@+id/emergency_contact_phone_et"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    android:hint="@string/please_enter_emergency_contact_phone"
                    android:background="@null"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="14sp"
                    android:maxLength="11"
                    android:inputType="phone"
                    android:textColor="@color/black_33"
                    android:textColorHint="@color/black_33"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white_f6"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
    <TextView
        android:id="@+id/submit_application_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/application_"
        android:textColor="@color/white"
        android:background="@color/yellow_65"
        android:gravity="center"
        android:padding="15dp"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
