<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@mipmap/carrental_icon_take"
        android:text="@string/take_car_address"
        android:textSize="12sp"
        android:textColor="@color/black_33"
        android:drawablePadding="10dp"
        android:layout_marginTop="15dp"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/take_car_city_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="昆明"
            android:textColor="@color/black_33"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/take_car_address_text_view"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            tools:text="润城第二大道"
            android:hint="@string/please_select_take_car_address"
            android:textColor="@color/black_33"
            android:textSize="17sp"
            android:padding="15dp"/>
        <CheckBox
            android:id="@+id/is_to_home_service_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/car_to_home"
            android:button="@mipmap/carrental_btn_checkthe_selected"
            android:textSize="12sp"
            android:textColor="@color/black_33"
            android:paddingStart="5dp"
            android:paddingEnd="0dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/split_line_color"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@mipmap/carrental_icon_also"
        android:text="@string/return_car_address"
        android:drawablePadding="10dp"
        android:paddingLeft="15dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="15dp"
        android:textSize="12sp"
        android:textColor="@color/black_33"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingStart="15dp"
        android:paddingEnd="0dp">

        <TextView
            android:id="@+id/return_the_car_city_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="昆明"
            android:textColor="@color/black_33"
            android:textSize="17sp"/>

        <TextView
            android:id="@+id/return_the_car_address_text_view"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            tools:text="润城第二大道"
            android:hint="@string/please_select_return_car_address"
            android:textColor="@color/black_33"
            android:textSize="17sp"
            android:padding="15dp"/>
    </LinearLayout>
</LinearLayout>