<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_ranger"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textColor="@color/black_33"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">
        <EditText
            android:id="@+id/min_price_et"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            android:hint="@string/min_price"
            android:textColorHint="@color/gray_99"
            android:textColor="@color/black_33"/>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0.5dp"
            android:background="@color/split_line_color"/>
        <EditText
            android:id="@+id/max_price_et"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:inputType="numberDecimal"
            android:textSize="14sp"
            android:hint="@string/max_price"
            android:textColorHint="@color/gray_99"
            android:textColor="@color/black_33"/>
    </LinearLayout>
    <android.support.v7.widget.CardView
        android:id="@+id/confirm_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/yellow_65"
        android:layout_margin="20dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm1"
            android:layout_gravity="center"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="@color/white" />
    </android.support.v7.widget.CardView>
</LinearLayout>